--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/flowers.png" type="image/x-icon">
+    <link rel="stylesheet" href="./kado-main/css/style.css">
+    <link rel="icon" href="./kado-main/img/flowers.png" type="image/x-icon">
     <title>Flowers</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Nhấn vào đây nè :3</a>
+            <a href="./kado-main/flower.html">Nhấn vào đây nè :3</a>
         </button>
         
     </div>
